# gamepad-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md  build.rs  memory.x
.cargo/: config.toml
src/: gamepad.rs  main.rs  usb.rs  ws2812.rs
