[package]
name = "gamepad-rs"
version = "0.1.0"
edition = "2021"
authors = ["riir"]
description = "MINIGPA103 USB HID gamepad reimplemented in Rust on Embassy"

[dependencies]
embassy-executor = { version = "0.7", features = ["defmt", "arch-cortex-m", "executor-thread", "task-arena-size-2048"] }
embassy-time     = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-stm32    = { version = "0.3", features = ["defmt", "stm32f103c8", "time-driver-any", "memory-x", "exti"] }
embassy-sync     = { version = "0.7", features = ["defmt"] }
embassy-usb      = { version = "0.5", features = ["defmt"] }
embassy-futures  = "0.1"

usbd-hid         = "0.9"
smart-leds       = "0.4"

static_cell      = "2"
defmt            = "1"
defmt-rtt        = "1"
panic-probe      = { version = "1", features = ["print-defmt"] }
cortex-m         = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt      = "0.7"

[profile.release]
debug     = 2
opt-level = "s"
lto       = "fat"
codegen-units = 1
